# chaos

./: .gitignore  AGENT.md  ANNOUNCEMENT.md  FINE.md  README.md  SYSTEM.md  TODO.md  URGENT.md  WHITEPAPER.md  YSON_FULL_FORMAT.md  analysis.md  learned.md  market.md  next_steps.md  pyproject.toml  tmp_web_page.txt  whitepaper_YSON.md  ysonx_cli.py  ysonx_results.md  ysonx_state.md  ysonx_swarm.py
.github/: pull_request_template.md
docs/: Architecture.md  CLI_Usage.md  Data_Formats.md  Developer_Guide.md  ENV_VARS.md  Enterprise_Readiness_Checklist.md  FAQ.md  GTM_90Day_Plan.md  Memory_and_Fractal.md  Modules.md  Overview.md  Personas_and_Logic.md  Plugin_API.md  Plugin_Tests.md  ROADMAP.md  Ranking_and_RAG.md  Security_Hardening_for_Pilots.md  Security_Performance.md  Swarm_and_Router.md
examples/: 01_crawl_index_qa.sh  02_local_html_demo.sh
genesis/: agent_EchoMuse.ysonx  agent_FractaLux.ysonx  agent_NekoInferno.ysonx  agent_NyxEcho.ysonx  agent_ObserverX.ysonx
manifests/: lila.json  webcrawler.decoded.json  webcrawler.encoded.json  webcrawler.json  webcrawler.ysonx
personas/: Cosmic-Bimbo.json  Cosmic-Bimbo.ysonx  DevOpsAgent.ysonx  EchoSanity.yson  EchoSanity.ysonx  FractaLux.yson  FractaLux.ysonx  GlitchGoblin.json  GlitchGoblin.ysonx  GlitchKitten.yson  GlitchKitten.ysonx  HookProbe.json  Komainu-Delta.yson  Komainu-Delta.ysonx  Lila-Prime.yson  Lila-Prime.ysonx  MemeticHazard.yson  MemeticHazard.ysonx  Neko-Waifu-9000.json  Neko-Waifu-9000.ysonx  NyxEcho.yson  NyxEcho.ysonx  Princess-Code.json  Princess-Code.ysonx  ReaperAI_01.yson  ReaperAI_01.ysonx  (+38 more)
(+70 files in other folders)
